# crypto_forecast

./: .bandit  .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  config.yaml  conftest.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  test.yml
data/: btc_usdt_daily.csv
data/cache/: BTC_USDT_1d.csv
docs/: architecture.md  features.md  models.md  setup.md
public/: index.html
scripts/: lint.sh  setup.sh  train.sh
src/: data_loader.py  dataset.py  evaluation.py  features.py  preprocessing.py  trainer.py  visualization.py
src/models/: baseline.py  lstm.py
tests/: conftest.py  test_dataset.py  test_evaluation.py  test_features.py  test_main.py  test_models.py  test_preprocessing.py  test_trainer.py  test_visualization.py
